--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,28 +1,19 @@
 
 <div class="courses-panel">
 
-        <h3>All Courses</h3>
+  <h3>All Courses</h3>
 
-        <mat-tab-group>
+  <mat-tab-group>
 
-            <mat-tab label="Beginners">
+    <mat-tab label="Beginners">
+       <courses-card-list  [courses]="beginnerCourses$ | async"></courses-card-list>
+    </mat-tab>
 
-                <courses-card-list [courses]="beginnerCourses$ | async">
+    <mat-tab label="Advanced">
+     <courses-card-list  [courses]="advancedCourses$ | async"></courses-card-list>
+    </mat-tab>
 
-                </courses-card-list>
-
-            </mat-tab>
-
-        <mat-tab label="Advanced">
-
-            <courses-card-list [courses]="advancedCourses$ | async">
-
-            </courses-card-list>
-
-
-        </mat-tab>
-
-    </mat-tab-group>
+  </mat-tab-group>
 
 
 
