--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,17 +21,18 @@
         <mat-icon>person_add</mat-icon>
         <span>Register</span>
       </a>
-
-      <a mat-list-item routerLink="login">
-        <mat-icon>account_circle</mat-icon>
-        <span>Login</span>
-      </a>
-
-      <a mat-list-item (click)="logout()">
-        <mat-icon>exit_to_app</mat-icon>
-        <span>Logout</span>
-      </a>
-
+        @if (auth.isLoggedOut$ | async) {
+            <a mat-list-item routerLink="login" >
+              <mat-icon>account_circle</mat-icon>
+              <span>Login</span>
+            </a>
+         }
+           @if (auth.isLoggedIn$ | async) {
+                <a mat-list-item (click)="logout()">
+                  <mat-icon>exit_to_app</mat-icon>
+                  <span>Logout</span>
+                </a>
+                }
     </mat-nav-list>
 
   </mat-sidenav>
