--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -1,34 +1,24 @@
-
-<div class="course">
-
-  <h2>{{course?.description}}</h2>
-
-  <img class="course-thumbnail" [src]="course?.iconUrl">
-
-  <table class="lessons-table mat-elevation-z7">
-
-    <thead>
-      <th>#</th>
-      <th>Description</th>
-      <th>Duration</th>
-    </thead>
-
-    @for (lesson of lessons; track lesson) {
-      <tr class="lesson-row">
-        <td class="seqno-cell">{{lesson.seqNo}}</td>
-        <td class="description-cell">{{lesson.description}}</td>
-        <td class="duration-cell">{{lesson.duration}}</td>
-      </tr>
+@if ((data$ | async); as data) {
+  <div class="course">
+    <h2>{{data.course?.description}}</h2>
+    @if (data.course) {
+      <img class="course-thumbnail" [src]="data.course?.iconUrl">
     }
-
-  </table>
-
-</div>
-
-
-
-
-
-
-
-
+    @if (data.lessons.length) {
+      <table class="lessons-table mat-elevation-z7">
+        <thead>
+          <th>#</th>
+          <th>Description</th>
+          <th>Duration</th>
+        </thead>
+        @for (lesson of data.lessons; track lesson) {
+          <tr class="lesson-row">
+            <td class="seqno-cell">{{lesson.seqNo}}</td>
+            <td class="description-cell">{{lesson.description}}</td>
+            <td class="duration-cell">{{lesson.duration}}</td>
+          </tr>
+        }
+      </table>
+    }
+  </div>
+}
