--- a/src/app/lesson/lesson.component.html
+++ b/src/app/lesson/lesson.component.html
@@ -1,1 +1,15 @@
-<p>lesson works!</p>
+
+<div class="lesson-detail">
+
+    <h3>{{lesson.description}}</h3>
+
+    <h5>Duration: {{lesson.duration}}</h5>
+
+    <iframe width="400" height="220"  frameborder="0" allowfullscreen
+        [src]="('https://www.youtube.com/embed/' + lesson?.videoId) | safeUrl">
+
+
+    </iframe>
+
+
+</div>
